recuperando dados de areas de interesse

--- a/propostas/templates/propostas/propostas.html
+++ b/propostas/templates/propostas/propostas.html
@@ -17,6 +17,9 @@
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'distribuicao_areas' %}">
   {% lng "Tendência de Áreas de Interesse" "Trend of Areas of Interest" %}
 </a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'evolucao_areas' %}">
+  {% lng "Evolução de Áreas de Interesse" "Evolution of Areas of Interest" %}
+</a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'propostas_apresentadas' %}">
   {% lng "Propostas Apresentadas" "Proposals Presented" %}
 </a></div>
