migrando novamente areas

--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -82,7 +82,10 @@
   
   <script>
     function carrega_pagina() {bar();};
-    function carrega_site() {carrega_pagina();};
+    function carrega_site() {
+      {% include "edicao_puxar_local_ou_versao.js" %}
+      carrega_pagina();
+    };
     window.onload = carrega_site
   </script>
 
