--- a/projetos/templates/projetos/evolucao_areas.html
+++ b/projetos/templates/projetos/evolucao_areas.html
@@ -8,21 +8,14 @@
 {% block head %}
   {% load static %}
   {% load linguas %}
-  <link href="{% static 'css/horizBarChart.css' %}" media="all" rel="stylesheet" type="text/css" />
-  <script src="{% static 'js/jquery.horizBarChart.min.js' %}"></script>
-
-  <script>
-    function bar(){
-      $(".chart").horizBarChart({
-          selector: ".bar",
-          speed: 800
-      });
-    }
-    $(document).ready(bar);
-  </script>
+  {% comment %} <link href="{% static 'css/horizBarChart.css' %}" media="all" rel="stylesheet" type="text/css" />
+  <script src="{% static 'js/jquery.horizBarChart.min.js' %}"></script> {% endcomment %}
 
   {% comment %} Para janela dos Tooltips {% endcomment %}
-  <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script>
+  {% comment %} <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script> {% endcomment %}
+
+  <script src="{% static 'js/Chart.min.js' %}"></script>
+  <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
 
 {% endblock %}
 
@@ -38,52 +31,77 @@
 
   <div id="atualizar">
 
-    <div class="2areas2" style="line-height: 1.3;">
-      <ul class="chart">
-      {% for key, value in areaspfe.items %}
-          <span
-            {% comment %} Tooltip para a descrição da área de interesse. {% endcomment %}
-            {% if value.1 %}
-                data-toggle="tooltip" data-html="true" animation="true" title="{{value.1}}"
-            {% endif %}
-            >
-            {{key}}<br>
-          </span>
-          <li class="past" title="" style="margin-top:0px; margin-bottom: 12px;">
-            <span class="bar" data-number="{{value.0.count}}"></span>
-            <span data-toggle="tooltip" data-html="true" animation="true"
-            {% if tipo == "estudantes" %}
-                title="{% for user in value.0 %}[{{user.usuario.aluno2.sigla_curta}}] - {{user.usuario.get_full_name}}{% comment %}&amp;lt;{{user.usuario.email}}&amp;gt;{% endcomment %}&lt;br&gt;{% endfor %}"
-            {% elif tipo == "propostas" %}
-                title="{% for proposta in value.0 %}{{proposta}}&lt;br&gt;{% endfor %}"
-            {% elif tipo == "projetos" %}
-                title="{% for projeto in value.0 %}{{projeto}}&lt;br&gt;{% endfor %}"
-            {% endif %}
-            class="number">{{value.0.count}}</span>
-          </li>
+    <div style="" class="mb-4"> 
+      <canvas id="evolucao_areas"></canvas>
+    </div>
+
+    <script>
+      
+      var colors = [
+          "#FF6384", "#36A2EB", "#FFCE56", "#4BC0C0", "#9966FF", "#FF9F40", "#E7E9ED",
+          "#8E44AD", "#3498DB", "#1ABC9C", "#F39C12", "#E74C3C", "#2ECC71", "#34495E",
+          "#D35400", "#7D3C98", "#16A085", "#F4D03F", "#C0392B", "#2980B9", "#27AE60", 
+          "#8E44AD", "#BDC3C7", "#2C3E50"
+      ];
+      
+      var config_evolucao_areas = {
+          type: "line",
+          data: {
+              labels: [{% for edicao in edicoes %}"{{edicao}}", {% endfor %}],
+              datasets: [
+                  {% for area, valores in tabela_areas.items %}
+                    {% if area != "outras" and area != "QUANTIDADES" and area != "PREENCHIDOS" %}
+                      { 
+                          data: [{% for no_anose in valores %}({{no_anose}}/100), {% endfor %}],
+                          label: "{{area}}",
+                          borderColor: colors[{{ forloop.counter0 }} % colors.length],
+                          fill: false,
+                          spanGaps: true,
+                          //lineTension: 0,  // para deixar as linhas retas (sem as curvas de bezier)
+                      },
+                    {% endif %}
+                  {% endfor %}
+              ]
+          },
+          options: {
+              title: { display: true,
+                        text: "Evolução das áreas de interesse"},
+          }
+      }
+
+    </script>
+
+
+    <table class="tabela-padrao table table-striped table-bordered table-hover">
+      <thead>
+        <tr>
+          <th style="width: 18em;">Area</th>
+          {% for edicao in edicoes %}<th>{{edicao}}</th>{% endfor %}
+        </tr>
+      </thead>
+      <tbody>
+        {% for area, valores in tabela_areas.items %}
+          <tr>
+            <td>{{area}}</td>
+            {% for no_anose in valores %}
+              <td style="text-align: right;">{{no_anose}}</td>
+            {% endfor %}
+          </tr>
         {% endfor %}
-        </ul>
-    </div>
 
-    <div style="line-height: 1;">
-      <b>{% lng "Outras" "Others" %}:</b>
-      {% for outra in outras %}
-          {{outra.outras}}{% if not forloop.last %},{% endif %}
-      {% endfor %}
-    </div>
+      </tbody>
+    </table>
 
-    <br>
-    {% if tipo == "estudantes" %}
-        Total de Estudantes: {{total}} <small>(total de estudantes que preencheram algum campo: {{total_preenchido}})</small><br>
-    {% elif tipo == "propostas" %}
-        Total de Propostas: {{total}}<br>
-    {% elif tipo == "projetos" %}
-        Total de Projetos: {{total}}<br>
-    {% endif %} 
   </div>
   
   <script>
-    function carrega_pagina() {bar();};
+    //function carrega_pagina() {bar();};
+
+    function carrega_pagina() {  
+      var chart_evolucao_areas = document.getElementById("evolucao_areas").getContext("2d");
+      window.medias = new Chart(chart_evolucao_areas, config_evolucao_areas);
+    }
+
     function carrega_site() {carrega_pagina();};
     window.onload = carrega_site
   </script>
