tira os avisos quando org não cadastrada eh cadastrada

--- a/propostas/templates/propostas/organizacao_view.html
+++ b/propostas/templates/propostas/organizacao_view.html
@@ -75,6 +75,9 @@
 
         $(".pulsar").css("animation-play-state", "paused"); // Stop pulsar animation
 
+        $("#org_nao_conectada").html("");
+        $("#org_conectada").html("");
+
       }
       else {
         console.log("Erro: Valor não atualizado.");
