--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -32,7 +32,7 @@
 {% block content %}
 
   {% if not proposta.organizacao %}
-  <h2 class="text-warning">
+  <h2 id="org_conectada" class="text-warning">
     {% lng "Proposta ainda sem organização definitiva" "Proposal still without definitive organization" %}
   </h2><br>
   {% endif %}
