--- a/templates/organizacao.html
+++ b/templates/organizacao.html
@@ -78,7 +78,7 @@
            <small>&#128279;</small>
         </a>
         {% if not proposta.organizacao %}
-          <small style="color:red; font-size: 12px;">
+          <small id="org_nao_conectada" style="color:red; font-size: 12px;">
             {% lng "Organização não conectada com proposta" "Organization not connected with proposal" %}
           </small>
         {% endif %}
