--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -47,13 +47,13 @@
     
     @media screen and (min-width: 1201px) {
       .estudante-icon:before {
-        content: "EstudanteXX";
+        content: "Estudante";
       }
       .autorizado-icon:before {
         content: "Analisada";
       }
       .disponivel-icon:before {
-        content: "Disponível";
+        content: "Liberada";
       }
       .fechado-icon:before {
         content: "Fechada";
@@ -91,23 +91,23 @@
         <thead class="table-info">
           <tr>
             <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Algum professor do comitê analisou que a proposta seja publicada para os estudantes" 
-            ><span class="autorizado-icon"></span></th>
+            data-lang-pt="Analisada" data-lang-en="Reviewed"><span class="autorizado-icon"></span></th>
             <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Proposta ficará disponível para estudantes na fase onde eles deverão selecionar interesse"
-            ><span class="disponivel-icon"></span></th>
+            data-lang-pt="Liberada" data-lang-en="Available"><span class="disponivel-icon"></span></th>
             <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Foi formado um grupo de estudantes para essa proposta de projeto"
-            ><span class="fechado-icon"></span></th>
+            data-lang-pt="Fechada" data-lang-en="Closed"><span class="fechado-icon"></span></th>
             <th scope="col" class="text-center" data-lang-pt="Proposta" data-lang-en="Proposal">Proposta</th>
             <th scope="col" class="periodo text-center" data-lang-pt="Período" data-lang-en="Semester">Período</th>
             <th scope="col" class="text-center organizacao" data-lang-pt="Organização" data-lang-en="Organization">Organização</th>
             <th scope="col" class="text-center" style="font-size: 12px;" data-lang-pt="Tipo" data-lang-en="Type">Tipo</th>
             <th scope="col" class="estudantes text-center" style="font-size: 12px;" 
-             ><span class="estudante-icon"></span>1</th>
+            data-lang-pt="Estudante1" data-lang-en="Student1"><span class="estudante-icon"></span>1</th>
             <th scope="col" class="estudantes text-center" style="font-size: 12px;" 
-             ><span class="estudante-icon"></span>2</th>
+            data-lang-pt="Estudante2" data-lang-en="Student2"><span class="estudante-icon"></span>2</th>
             <th scope="col" class="estudantes text-center" style="font-size: 12px;" 
-             ><span class="estudante-icon"></span>3</th>
+            data-lang-pt="Estudante3" data-lang-en="Student3"><span class="estudante-icon"></span>3</th>
             <th scope="col" class="estudantes text-center" style="font-size: 12px;"
-             ><span class="estudante-icon"></span>4</th>
+            data-lang-pt="Estudante4" data-lang-en="Student4"><span class="estudante-icon"></span>4</th>
             <th scope="col" class="text-center" style="font-size: 12px;" data-lang-pt="Disciplinas Recomendadas" data-lang-en="Recommended Courses">Disciplinas Recomendadas</th>
           </tr>
         </thead>
@@ -232,8 +232,9 @@
       
       <p>&nbsp;</p>
       <b>{% lng "Número Total de Propostas Publicadas:" "Total Number of Published Proposals:" %}</b>        <span id="propostas_publicadas"></span>
-        <a data-toggle="tooltip" data-html="true" animation="true" title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do Capstone.">
-          {% if propostas %}({{ propostas.count }}){% else %}(---){% endif %}
+        <a data-toggle="tooltip" data-html="true" animation="true"
+          title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do Capstone.">
+          ({{total_propostas}})
         </a><br>
       
       <b>{% lng "Número Total de Propostas Fechadas" "Total Number of Confirmed Proposals" %}:</b>
@@ -333,6 +334,7 @@
           if($("#PropostasTable th").length > 0) {   // Verifica se os THs foram registrados primeiro
             table = $("#PropostasTable").dataTable();
             if(table) {
+              table.fnSetColumnVis( 2, false );  // esconde Fechada
               table.fnSetColumnVis( 4, false );  // esconde Edição
             }
           }
