--- a/estudantes/templates/estudantes/estudantes.html
+++ b/estudantes/templates/estudantes/estudantes.html
@@ -99,7 +99,7 @@
 
 <div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=alocacao_semanal %}</span>
   <a 
-    {% if not projeto %}
+    {% if not request.user.eh_prof_a and not projeto %}
       class="disabled" onclick="showMessage('projeto')"
     {% else %}
       href="{% url 'alocacao_semanal' %}"
