--- a/templates/ver_pares.html
+++ b/templates/ver_pares.html
@@ -4,113 +4,171 @@
   Data: 12 de Outubro de 2024
 {% endcomment %}
 
+{% load static %}
 {% load linguas %}
+{% load get_field %}
 
-{% for colega, pares in colegas %}
+<link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}">
+<link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
 
-  {% if com_projeto %}
-    {% if not forloop.first%}<br><br>{% endif %}
-    <p style="page-break-before: always"></p>
-    {% include "cabecalho_projeto.html" with com_tit_original=True %}
+<style>
+  .feedback-label {
+    background-color: #f8f9f0;
+    padding: 1px 1px;
+    margin: 8px 0px 0px 0px;
+    font-size: 0.9rem; /* Slightly larger font size */
+    font-weight: 500; /* Medium font weight for emphasis */
+    color: #495057; /* Neutral dark gray text */
+    cursor: pointer; /* Indicate it's clickable */ 
+  }
+</style>
+
+<form method="post">{% csrf_token %}
+  {% for colega, pares, feedback in colegas %}
+
+    {% if com_projeto %}
+      {% if not forloop.first%}<br><br>{% endif %}
+      <p style="page-break-before: always"></p>
+      {% include "cabecalho_projeto.html" with com_tit_original=True %}
+    {% endif %}
+
+    <div class="div_arredondado mt-2">
+      <div class="topico">
+        {% lng "Avaliação para:" "Evaluation for:" %}
+        <a href="{% url 'estudante_detail' colega.aluno.id %}"><b>{{colega.aluno}}</b></a>
+      </div>
+
+      <hr>
+      <div class="pergunta">
+        {% lng_g colega.aluno.user.genero "O que você aprecia no" "O que você aprecia na"  "What do you appreciate about" %}
+        {{colega.aluno}}?<br>
+        {% for par in pares %}
+          <i>
+            {% lng "por:" "by:" %}          {{par.alocacao_de.aluno}}
+          </i>
+          <div class="caixa">{% if par.aprecia %}{{par.aprecia}}{% endif %}</div>    
+        {% endfor %}
+      </div>
+
+      <hr>
+      <div class="pergunta">
+        {% lng_g colega.aluno.user.genero "O que você vê o" "O que você vê a" "What do you see" %}
+        {{colega.aluno}}
+        {% lng "fazendo, ou deixando de fazer, que está atrapalhando?" "doing, or not doing, that is hindering?" %}<br>
+        {% for par in pares %}
+          <i>
+            {% lng "por:" "by:" %}          {{par.alocacao_de.aluno}}
+          </i>
+          <div class="caixa">{% if par.atrapalhando %}{{par.atrapalhando}}{% endif %}</div>   
+        {% endfor %}
+      </div>
+
+      <hr>
+      <div class="pergunta">
+        {% lng_g colega.aluno.user.genero "O que o" "O que a" "What can" %}
+        {{colega.aluno}}
+        {% lng "pode mudar, que faria diferença para você?" "change that would make a difference to you?" %}<br>
+        {% for par in pares %}
+          <i>
+            {% lng "por:" "by:" %}          {{par.alocacao_de.aluno}}
+          </i>
+          <div class="caixa">{% if par.mudar %}{{par.mudar}}{% endif %}</div>
+        {% endfor %}
+      </div>
+
+      <hr>
+      <div class="pergunta">
+        {% lng_g colega.aluno.user.genero "Entrega do" "Entrega da" "Delivery of" %}
+        {{colega.aluno}}<br>
+        <table class="table table-borderless table-striped">
+          {% for entrega in entregas %}
+            <tr>
+              {% with linha=forloop.counter0 %}
+                {% for par in pares %}<td class="align-middle" style="width: 12px;">
+                  {% if par.entrega == linha %}<span style="cursor: pointer;" data-toggle="tooltip" data-html="true" animation="true" title="{{par.alocacao_de.aluno}}">&#10003;</span>{%else%}&nbsp;{% endif %}</td>
+                {% endfor %}
+                <td class="nome_item">{{entrega}}</td>
+              {% endwith %}
+            </tr>
+          {% endfor %}
+        </table>
+      </div>
+
+      <hr>
+      <div class="pergunta">
+        {% lng_g colega.aluno.user.genero "Iniciativa do" "Iniciativa da" "Initiative of" %}
+        {{colega.aluno}}<br>
+        <table class="table table-borderless table-striped">
+          {% for iniciativa in iniciativas %}
+            <tr>
+              {% with linha=forloop.counter0 %}
+                {% for par in pares %}<td class="align-middle" style="width: 12px;">
+                  {% if par.iniciativa == linha %}<span style="cursor: pointer;" data-toggle="tooltip" data-html="true" animation="true" title="{{par.alocacao_de.aluno}}">&#10003;</span>{%else%}&nbsp;{% endif %}</td>
+                {% endfor %}
+                <td class="nome_item">{{iniciativa}}</td>
+              {% endwith %}
+            </tr>
+          {% endfor %}
+        </table>
+      </div>
+
+      <hr>
+      <div class="pergunta">
+        {% lng_g colega.aluno.user.genero "Comunicação do" "Comunicação da" "Communication of" %}
+        {{colega.aluno}}<br>
+        <table class="table table-borderless table-striped">
+          {% for comunicacao in comunicacoes %}
+            <tr>
+              {% with linha=forloop.counter0 %}
+                {% for par in pares %}<td class="align-middle" style="width: 12px;">
+                  {% if par.comunicacao == linha %}<span style="cursor: pointer;" data-toggle="tooltip" data-html="true" animation="true" title="{{par.alocacao_de.aluno}}">&#10003;</span>{%else%}&nbsp;{% endif %}</td>
+                {% endfor %}
+                <td class="nome_item">{{comunicacao}}</td>
+              {% endwith %}
+            </tr>
+          {% endfor %}
+        </table>
+      </div>
+
+      {% if editor or request.user.eh_admin%}
+        <div style="width: 100%; display: inline; margin-left: 8px;">
+          <label class="feedbacks feedback-label" for="customFeedback{{relato.id}}">
+            Feedback ({% lng "opcional" "optional" %})
+            {% if feedback %}<span class="seta seta-baixo">{% else %}<span class="seta seta-cima">{% endif %}</span>
+          </label>
+          <div id="customFeedback{{colega.id}}" style="{% if not feedback %}display: none;{% endif %} border: 2px solid red; margin-top: 10px; margin-right: 38px; width: 100%;">
+            <span style="color: green; font-size: 0.8rem; padding: 4px;">
+              {% lng "Você pode, opcionalmente, dar o feedback por texto aqui. Use como base os padrões recorrentes das avaliações, sem identificar quem comentou. Seja construtivo e objetivo, e deixe aberta a possibilidade de um diálogo presencial depois." "You may optionally provide feedback in writing here. Base it on recurring patterns from the evaluations, without identifying who made the comments. Be constructive and objective, and leave room for a possible follow-up conversation in person." %}
+            </span><br>
+            <label style="margin: 0px 0px 0px 4px;" for="feedback{{colega.id}}">Feedback para {{colega.aluno}}:</label>
+            <textarea id="feedback{{colega.id}}" name="feedback{{colega.id}}" rows="10" cols="180" class="texto_feedback"
+            {% if not editor %}disabled="disabled"{% endif %}
+            maxlength="{% max_length FeedbackPares 'feedback' %}">{% if feedback %}{{feedback.feedback}}{% endif %}</textarea>
+          </div>
+        </div>
+      {% endif %}
+
+    </div>
+  {% endfor %}
+
+  {% if verificada %}
+    <b>Anotado que a Avaliação de Pares foi verificada em: {{verificada}}</b><br>
   {% endif %}
 
-  <div class="div_arredondado mt-2">
-    <div class="topico">
-      {% lng "Avaliação para:" "Evaluation for:" %}
-       <a href="{% url 'estudante_detail' colega.aluno.id %}"><b>{{colega.aluno}}</b></a>
-    </div>
+  <button id="enviar_feedbacks" type="submit" name="enviar_feedbacks" value="enviar" 
+  class="btn btn-primary" style="display: none; margin-top: 20px; margin-bottom: 20px;">
+    {% lng "Enviar Feedback(s)" "Send Feedback(s)" %}
+  </button>
 
-    <hr>
-    <div class="pergunta">
-      {% lng_g colega.aluno.user.genero "O que você aprecia no" "O que você aprecia na"  "What do you appreciate about" %}
-      {{colega.aluno}}?<br>
-      {% for par in pares %}
-        <i>
-          {% lng "por:" "by:" %}          {{par.alocacao_de.aluno}}
-        </i>
-        <div class="caixa">{% if par.aprecia %}{{par.aprecia}}{% endif %}</div>    
-      {% endfor %}
-    </div>
+  <script>
+    $(".feedbacks").on("click", function() {
+      $(this).siblings("div").toggle(200);
+      $("span.seta", this).toggleClass("seta-baixo seta-cima");
+    });
 
-    <hr>
-    <div class="pergunta">
-      {% lng_g colega.aluno.user.genero "O que você vê o" "O que você vê a" "What do you see" %}
-      {{colega.aluno}}
-      {% lng "fazendo, ou deixando de fazer, que está atrapalhando?" "doing, or not doing, that is hindering?" %}<br>
-      {% for par in pares %}
-        <i>
-          {% lng "por:" "by:" %}          {{par.alocacao_de.aluno}}
-        </i>
-        <div class="caixa">{% if par.atrapalhando %}{{par.atrapalhando}}{% endif %}</div>   
-      {% endfor %}
-    </div>
+    $(".texto_feedback").on("input", function() {
+      $("#enviar_feedbacks").show(); // Show the button
+    });
+  </script>
 
-    <hr>
-    <div class="pergunta">
-      {% lng_g colega.aluno.user.genero "O que o" "O que a" "What can" %}
-      {{colega.aluno}}
-      {% lng "pode mudar, que faria diferença para você?" "change that would make a difference to you?" %}<br>
-      {% for par in pares %}
-        <i>
-          {% lng "por:" "by:" %}          {{par.alocacao_de.aluno}}
-        </i>
-        <div class="caixa">{% if par.mudar %}{{par.mudar}}{% endif %}</div>
-      {% endfor %}
-    </div>
-
-    <hr>
-    <div class="pergunta">
-      {% lng_g colega.aluno.user.genero "Entrega do" "Entrega da" "Delivery of" %}
-      {{colega.aluno}}<br>
-      <table class="table table-borderless table-striped">
-        {% for entrega in entregas %}
-          <tr>
-            {% with linha=forloop.counter0 %}
-              {% for par in pares %}<td class="align-middle" style="width: 12px;">
-                {% if par.entrega == linha %}<span style="cursor: pointer;" data-toggle="tooltip" data-html="true" animation="true" title="{{par.alocacao_de.aluno}}">&#10003;</span>{%else%}&nbsp;{% endif %}</td>
-              {% endfor %}
-              <td class="nome_item">{{entrega}}</td>
-            {% endwith %}
-          </tr>
-        {% endfor %}
-      </table>
-    </div>
-
-    <hr>
-    <div class="pergunta">
-      {% lng_g colega.aluno.user.genero "Iniciativa do" "Iniciativa da" "Initiative of" %}
-      {{colega.aluno}}<br>
-      <table class="table table-borderless table-striped">
-        {% for iniciativa in iniciativas %}
-          <tr>
-            {% with linha=forloop.counter0 %}
-              {% for par in pares %}<td class="align-middle" style="width: 12px;">
-                {% if par.iniciativa == linha %}<span style="cursor: pointer;" data-toggle="tooltip" data-html="true" animation="true" title="{{par.alocacao_de.aluno}}">&#10003;</span>{%else%}&nbsp;{% endif %}</td>
-              {% endfor %}
-              <td class="nome_item">{{iniciativa}}</td>
-            {% endwith %}
-          </tr>
-        {% endfor %}
-      </table>
-    </div>
-
-    <hr>
-    <div class="pergunta">
-      {% lng_g colega.aluno.user.genero "Comunicação do" "Comunicação da" "Communication of" %}
-      {{colega.aluno}}<br>
-      <table class="table table-borderless table-striped">
-        {% for comunicacao in comunicacoes %}
-          <tr>
-            {% with linha=forloop.counter0 %}
-              {% for par in pares %}<td class="align-middle" style="width: 12px;">
-                {% if par.comunicacao == linha %}<span style="cursor: pointer;" data-toggle="tooltip" data-html="true" animation="true" title="{{par.alocacao_de.aluno}}">&#10003;</span>{%else%}&nbsp;{% endif %}</td>
-              {% endfor %}
-              <td class="nome_item">{{comunicacao}}</td>
-            {% endwith %}
-          </tr>
-        {% endfor %}
-      </table>
-    </div>
-  </div>
-
-{% endfor %}
+</form>
