--- a/templates/perfil_estudantes.html
+++ b/templates/perfil_estudantes.html
@@ -20,7 +20,7 @@
   <small class="obs">
     {% lng "Cada linha representa uma vaga que idealmente deve ser preenchida por um estudante dos cursos marcados" "Each row represents a vacancy that should ideally be filled by a student from the marked programs" %}
   </small>
-  <table>
+  <table class="table-striped">
     <thead>
       <tr style="background-color: #EEF;">
         <th style="text-align:center;" colspan="2"></th>
@@ -35,7 +35,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr> {% comment %} NAO EH A FORMA MAIS ELEGANTE MAS FUNCIONA POR ENQUANTO {% endcomment %}
+      <tr>
         <td style="background-color: #EEF; text-align:center; writing-mode: vertical-lr;" rowspan="4">
           {% lng "Estudantes" "Students" %}
         </td>
