--- a/propostas/templates/propostas/proposta_detalhes.html
+++ b/propostas/templates/propostas/proposta_detalhes.html
@@ -8,6 +8,7 @@
 {% block head %}
 
   {% load static %}
+  {% load linguas %}
 
   {% comment %} Para o gráfico no final da página {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
@@ -33,15 +34,16 @@
   {% include "prioridades.html" %}
 
   {% if proposta.autorizado %}
-    <hr>
-    <br><b><label for="autorizador">Membro do comitê do Capstone responsável pela proposta</label></b>:
+    <hr><br>
+    <b><label for="autorizador">
+      {% lng "Membro do comitê do Capstone responsável pela proposta" "Capstone committee member responsible for the proposal" %}
+    </label></b>:
     <span id="autorizador">
       {{ proposta.autorizado.get_full_name }}
       <a href="mailto:{{proposta.autorizado.email}}"> &lt;{{proposta.autorizado.email}}&gt;</a>
     </span><br>
-    <small class="lh-1">Obs: O responsável da proposta não necessariamente será o orientador do projeto, e muitas vezes não é.
-          Use esse contato para tirar dúvidas da proposta. Perceba também que o responsável pode demorar para responder suas dúvidas.
-          Não espere respostas imediatas, pois não as terá.
+    <small class="lh-1">
+      {% lng "Obs: O responsável da proposta não necessariamente será o orientador do projeto, e muitas vezes não é. Use esse contato para tirar dúvidas da proposta. Perceba também que o responsável pode demorar para responder suas dúvidas. Não espere respostas imediatas, pois não as terá." "Note: The proposal manager will not necessarily be the project advisor, and often is not. Use this contact to ask questions about the proposal. Also note that the manager may take a while to respond to your questions. Do not expect immediate answers, as you will not have them." %}
     </small>
   {% endif %}
 
