--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -72,7 +72,6 @@
 
       .tab_contatos td {
         text-align: left;
-        {% comment %} padding-left: 50%; {% endcomment %}
         position: relative;
       }
 
@@ -122,7 +121,7 @@
         {% if user.eh_admin %}{% define False as liberadas_propostas %}{% endif %}
 
         {% if request.user.eh_prof %}
-          <b>{% lng "Seu Perfil é de Professor, você está preenchendo para alguma organização." "Your Profile is of Teacher, you are filling in for some organization." %}</b><br>
+          <b>{% lng "Seu Perfil é de Professor, você está preenchendo para alguma organização." "Your Profile is of Professor, you are filling in for some organization." %}</b><br>
         {% elif request.user.eh_admin %}
           <b>{% lng "Seu Perfil é de Administrador, você está preenchendo para alguma organização." "Your Profile is of Administrator, you are filling in for some organization." %}</b><br>
         {% endif %}
